[gd_scene load_steps=4 format=3 uid="uid://c31g0smlywes2"]

[ext_resource type="Script" uid="uid://b2k0wdgpd2gde" path="res://Scripts/ennemy.gd" id="1_uq27j"]
[ext_resource type="PackedScene" uid="uid://pej2qquyboig" path="res://Scenes/damages_text.tscn" id="2_gvr15"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5im4a"]
radius = 5.0

[node name="Ennemy" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_uq27j")
damages_text = ExtResource("2_gvr15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5im4a")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -5.0
offset_top = -20.0
offset_right = 5.0
color = Color(1.20327e-08, 0, 0.23362, 1)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_postprocessing = 1
simplify_epsilon = 0.8
avoidance_enabled = true
debug_enabled = true

[node name="path_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="MarkerDamages" type="Marker2D" parent="."]
position = Vector2(0, -22)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="path_Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
